# darksidewalletd-datasets

./: .gitignore  README.md
151-coinbases/: README.md  blocks.txt  list_of_block_hashes.txt  list_of_transaction_ids.txt  zcashd_backup.txt
151-coinbases/Scripts/: dump_blocks_into_file.py  dump_blocks_into_single_files.py  dump_transactions.py  set_up_test.sh
151-coinbases/UTXOs/: 1.json
151-coinbases/blocks/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  (+112 more)
151-coinbases/treestates/: 1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  131.json  132.json  133.json  134.json  (+111 more)
advanced-reorg-tests/: README.md
advanced-reorg-tests/Scripts/: generate_base_dataset.py  get_testcase_utxos.py  set_up_test.sh  zcash_rpc.py
advanced-reorg-tests/dataset/: base_dataset_100.txt  block_202.txt
sfoe/: README.md
sfoe/Scripts/generate_addresses/: Cargo.toml
sfoe/Scripts/generate_addresses/src/: main.rs
sfoe/dataset/: SFoE_100.txt  block_206.txt  set_up_full_synthetic_test.sh  (+3 more)
(+1339 files in other folders)
